# hcmus-ai-foundations--hashiwokakero

./: README.md
Source/: .gitignore  README.md  pyproject.toml  requirements.txt
Source/data/: gen.sh
Source/data/input/: input-00.txt
Source/data/input/11x11/: input-01.txt  input-02.txt  input-04.txt  input-05.txt
Source/data/input/13x13/: input-01.txt  input-02.txt  input-03.txt  input-04.txt  input-05.txt
Source/data/input/17x17/: input-01.txt  input-02.txt  input-04.txt  input-05.txt  input-06.txt
Source/data/input/20x20/: input-02.txt  input-03.txt  input-04.txt  input-05.txt  input-06.txt
Source/data/input/3x3/: input-01.txt  input-03.txt
Source/data/input/5x5/: input-01.txt
Source/data/input/7x7/: input-01.txt  input-02.txt  input-04.txt  input-05.txt
Source/data/input/9x9/: input-01.txt  input-02.txt  input-03.txt  input-04.txt  input-05.txt
Source/data/output/11x11/pysat/: output-01.txt  output-02.txt  output-04.txt  output-05.txt
Source/data/output/13x13/pysat/: output-01.txt  output-02.txt  output-03.txt  output-04.txt  (+1 more)
Source/md/: guide.md  todo.md
Source/src/: __types.py  benchmark.py  classes.py
Source/src/constants/: path.py
Source/src/hashiwokakero/: __init__.py  __main__.py
Source/src/models/: __init__.py  component.py
Source/src/solvers/: __init__.py  astar_solver.py  backtracking.py  brute_force.py  pysat_solver.py
Source/src/utils/: __init__.py  args.py  base.py  benchmark.py  cnf.py  cnf_generator.py  data.py  format.py  metrics.py
Source/tests/: test_base.py  test_cnf_generator.py  test_dsu.py  test_solvers.py
(+37 files in other folders)
